<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/judul_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/textview_judul_search"
            android:textColor="@color/textview_color"
            android:textSize="@dimen/size_text_judul"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/judul_app"
            android:layout_margin="@dimen/size_padding_half"
            android:background="@color/garis_color" />

        <LinearLayout
            android:id="@+id/wrapper_findDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/judul_app"
            android:orientation="horizontal"
            android:padding="@dimen/size_padding">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_judul_searchby"
                android:layout_gravity="center_vertical"
                />

            <Spinner 
                android:id="@+id/spinner_searchby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/search_doctor"
                />
        </LinearLayout>
        
        <EditText 
            android:id="@+id/ed_string_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_katakunci"
            android:layout_below="@id/wrapper_findDoctor"
            />
        
        <Button android:id="@+id/btn_search_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_search"     
            android:textColor="@android:color/white"       
            android:layout_margin="@dimen/size_padding"
            android:layout_below="@id/ed_string_search"
            android:background="@drawable/selector"
            />
    </RelativeLayout>

    

</RelativeLayout>