<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <TextView
        android:id="@+id/txt_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_large"
        android:text="@string/textview_forgotpassword"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_forgotpassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_dropshadow"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_top"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_username" />

            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/size_padding_half"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small"
                >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_password"
                android:layout_alignParentLeft="true" />
            
            <ImageView 
                android:id="@+id/btn_showPass"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/img_showpass"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                />

            <EditText
                android:id="@+id/edittext_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_showPass"
                android:layout_toRightOf="@id/img_password"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/size_padding_half"
                android:password="true"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small" />
            
            
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_bot"
            android:orientation="vertical"
            android:padding="@dimen/size_padding_half" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:background="@drawable/selector"
                android:text="@string/btn_label_login"
                android:textColor="#ffffff"
                android:textSize="@dimen/size_text_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/size_padding_half" >

                <TextView
                    android:id="@+id/txt_register_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_donthaveaccount"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/size_text_small" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/textview_registernow"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_text_standard" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>