<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/shape_dropshadow"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_top"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_username" />

            <EditText
                android:id="@+id/txt_edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/size_padding_half"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_password" />

            <EditText
                android:id="@+id/txt_edit_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_insert_oldpass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/size_padding_half"
                android:password="true"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_password" />

            <EditText
                android:id="@+id/txt_edit_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_insert_newpass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/size_padding_half"
                android:password="true"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/img_icon_password"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/txt_edit_newpassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_retype_newpass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/size_padding_half"
                android:password="true"
                android:singleLine="true"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/garis_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_bot"
            android:orientation="vertical"
            android:padding="@dimen/size_padding_half" >

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:background="@drawable/selector"
                android:text="@string/btn_label_save"
                android:textColor="#ffffff"
                android:textSize="@dimen/size_text_small" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:background="@drawable/selector"
                android:text="@string/btn_label_logout"
                android:textColor="#ffffff"
                android:textSize="@dimen/size_text_small" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:background="@drawable/selector"
                android:text="@string/btn_label_cancel"
                android:textColor="#ffffff"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>