<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_makeappointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/selector"
        android:text="@string/btn_label_makeappointment"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_makeappointment"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:src="@drawable/logo_lafiya_horizontal" />

        <TextView
            android:id="@+id/judul_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/textview_judul_finddoctor_detail"
            android:textColor="@color/textview_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/textview_color"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/atas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/img_profiledoctor"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@drawable/img_dokter" />

                <TextView
                    android:id="@+id/txt_nama_dokter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_detaildoctor_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/textview_judul_finddoctor_detail_schedule"
            android:textColor="@color/textview_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/iv_emptydataset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_empty_schedule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="No Schedule Yet"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview_jadwal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/listview_selector"
            android:padding="10dp"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Deskripsi"
        android:visibility="visible" />

</RelativeLayout>